# speed_value_recognizer

./: CMakeLists.txt  README.md  read_text.cpp
cmake/: FindTESSERACT.cmake
